styles.css
/* ... */
.separated > :nth-child(7) a,
.separated > :nth-child(9) a,
.separated > :nth-child(11) a,
.separated > :nth-child(13) a,
.separated > :nth-child(15) a,
.separated > :nth-child(17) a {
	position: absolute;
	left: 165px;
}

.separated > :nth-child(8) a,
.separated > :nth-child(10) a,
.separated > :nth-child(12) a,
.separated > :nth-child(14) a,
.separated > :nth-child(16) a,
.separated > :nth-child(18) a {
	position: absolute;
	left: 86px;
}

.separated > :nth-child(19),
.separated > :nth-child(20),
.separated > :nth-child(27),
.separated > :nth-child(29) {
	text-align: left;
	padding-right: calc((180 / 16) * 1rem);
}

.separated > :nth-child(19) {
	grid-area: mission;
}

.separated > :nth-child(20) {
	grid-area: corp;
}

.separated > :nth-child(19) a,
.separated > :nth-child(20) a,
.separated > :nth-child(27) a,
.separated > :nth-child(29) a {
	display: none;
}

.separated > :nth-child(19):after,
.separated > :nth-child(20):after,
.separated > :nth-child(27):after,
.separated > :nth-child(29):after {
	font-family: 'Noto Serif';
	font-size: 0.6875rem;
	line-height: 24px;
	font-weight: 300;
	padding: 0 !important;
}

.separated > :nth-child(19):after {
	content: 'eLife is a non-profit organisation inspired by research funders and led by scientists. Our mission is to help scientists accelerate discovery by operating a platform for research communication that encourages and recognises the most responsible behaviours in science.' !important;
}

.separated > :nth-child(20):after {
	content: 'eLife Sciences Publications, Ltd is a limited liability non-profit non-stock corporation incorporated in the State of Delaware, USA, with company number 5030732, and is registered in the UK with company number FC030576 and branch number BR015634 at the address:' !important;
}

.separated > :nth-child(27):after {
	content: 'eLife Sciences Publications, Ltd \A Westbrook Centre, Milton Road \A Cambridge CB4 1YG \A UK' !important;
	white-space: pre-wrap;
}

.separated > :nth-child(29):after {
	content: '© 2022 eLife Sciences Publications Ltd. Subject to a Creative Commons Attribution license, except where otherwise noted. ISSN: 2050-084X' !important;
}

.separated > :nth-child(21),
.separated > :nth-child(22),
.separated > :nth-child(23),
.separated > :nth-child(24),
.separated > :nth-child(25) {
	margin-top: calc((50 / 16) * 1rem);
	grid-area: social;
}

.separated > :nth-child(21) a,
.separated > :nth-child(22) a,
.separated > :nth-child(23) a,
.separated > :nth-child(24) a,
.separated > :nth-child(25) a {
	position: absolute;
}

.separated > :nth-child(21) a {
	left: 164px;
	z-index: 100;
}

.separated > :nth-child(26) {
	text-align: left;
	padding-left: calc((164 / 16) * 1rem);
	grid-area: github;
}

.separated > :nth-child(27) {
	grid-area: address;
}

.separated > :nth-child(28) {
	grid-area: certifications;
	padding-top: calc((60 / 16) * 1rem);
}

.separated > :nth-child(28) a {
	background-image: url('https://elifesciences.org/assets/patterns/img/patterns/molecules/carbon-neutral.706efe6d.svg');
	background-size: 247px auto;
	background-position: 164px center;
	text-align: left;
	height: 50px;
}

.separated > :nth-child(29) {
	grid-area: copyright;
}

.separated > :nth-child(30),
.separated > :nth-child(31) {
	display: none;
}

/* About Page */

/* This selector is extremely brittle. As long a no-one changes the order of the page header and the About menu, it
 will hopefully stand up, but no guarantees. */
#main-content > .layout-component:first-child > .layout-html-component:nth-child(2) .container {
	width: 98%;
	max-width: calc(( 1200 / 16) * 1rem);
	padding-left: 0;
	padding-right: 0;
}

ol.section-listing {
	display: flex;
	justify-content: center;
	column-gap: 36px;
	font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
	font-size: 1rem;
	width: 150%;
	margin-left: -25%;
	border-top: 1px #e0e0e0 solid;
	border-bottom: 1px #e0e0e0 solid;
	padding: calc((10 / 16) * 1rem) 0;
}

ol.section-listing li {
	list-style-type: none;
}

ol.section-listing li a {
	text-decoration: none;
}

ol.section-listing li a:hover {
	color: #087acc;
}

ol.section-listing li.section-listing__list_item--current a {
	color: #087acc;
}

/* Paul experimenting */
.two-column-parent {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: 1fr;
	grid-column-gap: 36px;
	grid-row-gap: 0px;
}

.two-column-parent div {
	width: 45%;
}

.two-column-first {
	grid-area: 1 / 1 / 2 / 3;
}
.two-column-second {
	grid-area: 1 / 2 / 2 / 3;
}
.two-column-third {
	grid-area: 1 / 1 / 2 / 2;
}

/* About page card styles - test */
.grid {
	/*border: 1px blue solid;*/
	display: grid;
	/* grid-template-columns: 1fr 1fr; */
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: 1fr 1fr;
	grid-column-gap: 48px;
	grid-row-gap: 48px;
	padding: 0 calc((24 / 16) * 1rem);
	/* max-width:1200px; */
	margin-top: calc((48 / 16) * 1rem);
	margin: calc((48 / 16) * 1rem) auto 0 auto;
}

.card {
	/*border: 1px orange solid;*/
	grid-column: span 6;
	display: grid;
	grid-template-columns: auto auto;
	grid-column-gap: 24px;
	padding: calc((12 / 16) * 1rem);
}

.card.right .card_text {
	/*border: solid 1px red;*/
	grid-column: 2 / 2;
	grid-row: 1 / 1;
}

.card.right .img_placeholder {
	grid-column: 1 / 1;
	grid-row: 1 / 1;
}

.img_placeholder {
	width: 200px;
	height: 200px;
	background: #e0e0e0;
	justify-self: end;
}

.block-content .card h3 {
	line-height: 2rem;
}

@media only screen and (max-width: 1200px) {
	.grid {
		grid-template-columns: 1fr;
		border: 1px solid green;
		max-width: 800px;
	}
	/* Undo the flipped positioning for "right" classes below 1200px */
	.card.right .card_text {
		grid-column: 1 / 1;
		grid-row: 1 / 1;
	}

	.card.right .img_placeholder {
		grid-column: 2 / 2;
		grid-row: 1 / 1;
	}
	.nav-bar-component ul.nav-list > :nth-child(7) a .title,
	.nav-bar-component ul.nav-list > :nth-child(8) a .title {
		display: none;
	}
}

